--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ plumbum==1.8.3
 psutil==5.9.8
 pwntools==4.12.0
 pycparser==2.22
+pycryptodome==3.20.0
 pyelftools==0.31
 Pygments==2.18.0
 PyNaCl==1.5.0
